package modele.item;

public enum Color {
    Red, Green, Blue, Yellow, Purple, Cyan, White
}
