package modele.item;

public abstract class Item {
}
