package modele.item;

public enum SubShape {
    Circle, Carre, Fan, Star, None
}
