package modele.plateau;

public class Poubelle extends Machine {
    @Override
    public void send() {

    }
}
