package modele.plateau;

import modele.item.ItemShape;

public class Tapis extends Machine{





}
